--- a/app/src/components/rooms/secondFloor/hall/Hall.module.scss
+++ b/app/src/components/rooms/secondFloor/hall/Hall.module.scss
@@ -5,13 +5,13 @@
   min-height: 100vh;
   display: flex;
   justify-content: flex-start;
-  background-color: #eaeaea;
+  background-color: #c1d6ff;
   overflow-x: scroll;
 }
 
 .background {
   margin-top: 20px;
-  background-image: url('../../../../img/hall.png');
+  background-image: url('../../../../img/hall.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   min-width: calc(1440px * 0.4);
@@ -35,54 +35,27 @@
     top: 12%;
     left: 43%;
   }
+}
 
-  &__door2 {
-    width: 6%;
-    height: 20%;
-    top: 44%;
-    left: 87%;
+.objects {
+  position: absolute;
+  cursor: pointer;
+
+  $sizeMultiplier: 0.4;
+
+  &__wallpaper {
+    width: calc(250px * $sizeMultiplier * 0.5);
+    height: calc(330px * $sizeMultiplier * 0.5);
   }
 
-  &__wallpaper1 {
-    width: 10%;
-    height: 16%;
-    top: 16%;
-    left: 50%;
+  &__door {
+    width: calc(107px * $sizeMultiplier * 0.5);
+    height: calc(401px * $sizeMultiplier * 0.5);
   }
 
-  &__wallpaper2 {
-    width: 9%;
-    height: 16%;
-    top: 25%;
-    left: 63%;
-  }
-
-  &__wallpaper3 {
-    width: 9%;
-    height: 16%;
-    top: 35%;
-    left: 75%;
-  }
-
-  &__plat1 {
-    width: 11%;
-    height: 9%;
-    top: 43%;
-    left: 22%;
-  }
-
-  &__plat2 {
-    width: 11%;
-    height: 9%;
-    top: 53%;
-    left: 35%;
-  }
-
-  &__plat3 {
-    width: 11%;
-    height: 9%;
-    top: 65%;
-    left: 50%;
+  &__plat {
+    width: calc(352px * $sizeMultiplier * 0.5);
+    height: calc(195px * $sizeMultiplier * 0.5);
   }
 }
 
@@ -93,43 +66,151 @@
 }
 
 @media screen and (min-width: 700px) and (min-height: 512px) {
+  $sizeMultiplier: 0.5;
   .background {
-    width: calc(1440px * 0.5);
-    height: calc(1024px * 0.5);
+    width: calc(1440px * $sizeMultiplier);
+    height: calc(1024px * $sizeMultiplier);
+  }
+
+  .objects {
+    &__wallpaper {
+      width: calc(250px * $sizeMultiplier * 0.5);
+      height: calc(330px * $sizeMultiplier * 0.5);
+    }
+
+    &__door {
+      width: calc(107px * $sizeMultiplier * 0.5);
+      height: calc(401px * $sizeMultiplier * 0.5);
+    }
+
+    &__plat {
+      width: calc(352px * $sizeMultiplier * 0.5);
+      height: calc(195px * $sizeMultiplier * 0.5);
+    }
   }
 }
 
 @media screen and (min-width: 870px) and (min-height: 614px) {
+  $sizeMultiplier: 0.6;
   .background {
-    width: calc(1440px * 0.6);
-    height: calc(1024px * 0.6);
+    width: calc(1440px * $sizeMultiplier);
+    height: calc(1024px * $sizeMultiplier);
+  }
+
+  .objects {
+    &__wallpaper {
+      width: calc(250px * $sizeMultiplier * 0.5);
+      height: calc(330px * $sizeMultiplier * 0.5);
+    }
+
+    &__door {
+      width: calc(107px * $sizeMultiplier * 0.5);
+      height: calc(401px * $sizeMultiplier * 0.5);
+    }
+
+    &__plat {
+      width: calc(352px * $sizeMultiplier * 0.5);
+      height: calc(195px * $sizeMultiplier * 0.5);
+    }
   }
 }
 
 @media screen and (min-width: 1020px) and (min-height: 716px) {
+  $sizeMultiplier: 0.7;
   .background {
-    width: calc(1440px * 0.7);
-    height: calc(1024px * 0.7);
+    width: calc(1440px * $sizeMultiplier);
+    height: calc(1024px * $sizeMultiplier);
+  }
+
+  .objects {
+    &__wallpaper {
+      width: calc(250px * $sizeMultiplier * 0.5);
+      height: calc(330px * $sizeMultiplier * 0.5);
+    }
+
+    &__door {
+      width: calc(107px * $sizeMultiplier * 0.5);
+      height: calc(401px * $sizeMultiplier * 0.5);
+    }
+
+    &__plat {
+      width: calc(352px * $sizeMultiplier * 0.5);
+      height: calc(195px * $sizeMultiplier * 0.5);
+    }
   }
 }
 
 @media screen and (min-width: 1175px) and (min-height: 819px) {
+  $sizeMultiplier: 0.8;
   .background {
-    width: calc(1440px * 0.8);
-    height: calc(1024px * 0.8);
+    width: calc(1440px * $sizeMultiplier);
+    height: calc(1024px * $sizeMultiplier);
+  }
+
+  .objects {
+    &__wallpaper {
+      width: calc(250px * $sizeMultiplier * 0.5);
+      height: calc(330px * $sizeMultiplier * 0.5);
+    }
+
+    &__door {
+      width: calc(107px * $sizeMultiplier * 0.5);
+      height: calc(401px * $sizeMultiplier * 0.5);
+    }
+
+    &__plat {
+      width: calc(352px * $sizeMultiplier * 0.5);
+      height: calc(195px * $sizeMultiplier * 0.5);
+    }
   }
 }
 
 @media screen and (min-width: 1320px) and (min-height: 921px) {
+  $sizeMultiplier: 0.9;
   .background {
-    width: calc(1440px * 0.9);
-    height: calc(1024px * 0.9);
+    width: calc(1440px * $sizeMultiplier);
+    height: calc(1024px * $sizeMultiplier);
+  }
+
+  .objects {
+    &__wallpaper {
+      width: calc(250px * $sizeMultiplier * 0.5);
+      height: calc(330px * $sizeMultiplier * 0.5);
+    }
+
+    &__door {
+      width: calc(107px * $sizeMultiplier * 0.5);
+      height: calc(401px * $sizeMultiplier * 0.5);
+    }
+
+    &__plat {
+      width: calc(352px * $sizeMultiplier * 0.5);
+      height: calc(195px * $sizeMultiplier * 0.5);
+    }
   }
 }
 
 @media screen and (min-width: 1460px) and (min-height: 1024px) {
+  $sizeMultiplier: 1;
   .background {
     width: 1440px;
     height: 1024px;
+  }
+
+  .objects {
+    &__wallpaper {
+      width: calc(250px * $sizeMultiplier * 0.5);
+      height: calc(330px * $sizeMultiplier * 0.5);
+    }
+
+    &__door {
+      width: calc(107px * $sizeMultiplier * 0.5);
+      height: calc(401px * $sizeMultiplier * 0.5);
+    }
+
+    &__plat {
+      width: calc(352px * $sizeMultiplier * 0.5);
+      height: calc(195px * $sizeMultiplier * 0.5);
+    }
   }
 }
