--- a/app/src/components/rooms/secondFloor/hall/Hall.module.scss
+++ b/app/src/components/rooms/secondFloor/hall/Hall.module.scss
@@ -1,216 +1,3 @@
 @import '../../../../assets/helpers/index.scss';
 
-.wrapper {
-  min-width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  justify-content: flex-start;
-  background-color: #c1d6ff;
-  overflow-x: scroll;
-}
-
-.background {
-  margin-top: 20px;
-  background-image: url('../../../../img/hall.jpg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  min-width: calc(1440px * 0.4);
-  height: calc(1024px * 0.4);
-  position: relative;
-}
-
-.room {
-  opacity: $clickableAreaOpacity;
-  cursor: pointer;
-  position: absolute;
-  background-color: rgba(255, 102, 51, 0.2);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  &__door1 {
-    width: 6%;
-    height: 20%;
-
-    top: 12%;
-    left: 43%;
-  }
-}
-
-.objects {
-  position: absolute;
-  cursor: pointer;
-
-  $sizeMultiplier: 0.4;
-
-  &__wallpaper {
-    width: calc(250px * $sizeMultiplier * 0.5);
-    height: calc(330px * $sizeMultiplier * 0.5);
-  }
-
-  &__door {
-    width: calc(107px * $sizeMultiplier * 0.5);
-    height: calc(401px * $sizeMultiplier * 0.5);
-  }
-
-  &__plat {
-    width: calc(352px * $sizeMultiplier * 0.5);
-    height: calc(195px * $sizeMultiplier * 0.5);
-  }
-}
-
-@media screen and (min-width: 576px) {
-  .wrapper {
-    justify-content: center;
-  }
-}
-
-@media screen and (min-width: 700px) and (min-height: 512px) {
-  $sizeMultiplier: 0.5;
-  .background {
-    width: calc(1440px * $sizeMultiplier);
-    height: calc(1024px * $sizeMultiplier);
-  }
-
-  .objects {
-    &__wallpaper {
-      width: calc(250px * $sizeMultiplier * 0.5);
-      height: calc(330px * $sizeMultiplier * 0.5);
-    }
-
-    &__door {
-      width: calc(107px * $sizeMultiplier * 0.5);
-      height: calc(401px * $sizeMultiplier * 0.5);
-    }
-
-    &__plat {
-      width: calc(352px * $sizeMultiplier * 0.5);
-      height: calc(195px * $sizeMultiplier * 0.5);
-    }
-  }
-}
-
-@media screen and (min-width: 870px) and (min-height: 614px) {
-  $sizeMultiplier: 0.6;
-  .background {
-    width: calc(1440px * $sizeMultiplier);
-    height: calc(1024px * $sizeMultiplier);
-  }
-
-  .objects {
-    &__wallpaper {
-      width: calc(250px * $sizeMultiplier * 0.5);
-      height: calc(330px * $sizeMultiplier * 0.5);
-    }
-
-    &__door {
-      width: calc(107px * $sizeMultiplier * 0.5);
-      height: calc(401px * $sizeMultiplier * 0.5);
-    }
-
-    &__plat {
-      width: calc(352px * $sizeMultiplier * 0.5);
-      height: calc(195px * $sizeMultiplier * 0.5);
-    }
-  }
-}
-
-@media screen and (min-width: 1020px) and (min-height: 716px) {
-  $sizeMultiplier: 0.7;
-  .background {
-    width: calc(1440px * $sizeMultiplier);
-    height: calc(1024px * $sizeMultiplier);
-  }
-
-  .objects {
-    &__wallpaper {
-      width: calc(250px * $sizeMultiplier * 0.5);
-      height: calc(330px * $sizeMultiplier * 0.5);
-    }
-
-    &__door {
-      width: calc(107px * $sizeMultiplier * 0.5);
-      height: calc(401px * $sizeMultiplier * 0.5);
-    }
-
-    &__plat {
-      width: calc(352px * $sizeMultiplier * 0.5);
-      height: calc(195px * $sizeMultiplier * 0.5);
-    }
-  }
-}
-
-@media screen and (min-width: 1175px) and (min-height: 819px) {
-  $sizeMultiplier: 0.8;
-  .background {
-    width: calc(1440px * $sizeMultiplier);
-    height: calc(1024px * $sizeMultiplier);
-  }
-
-  .objects {
-    &__wallpaper {
-      width: calc(250px * $sizeMultiplier * 0.5);
-      height: calc(330px * $sizeMultiplier * 0.5);
-    }
-
-    &__door {
-      width: calc(107px * $sizeMultiplier * 0.5);
-      height: calc(401px * $sizeMultiplier * 0.5);
-    }
-
-    &__plat {
-      width: calc(352px * $sizeMultiplier * 0.5);
-      height: calc(195px * $sizeMultiplier * 0.5);
-    }
-  }
-}
-
-@media screen and (min-width: 1320px) and (min-height: 921px) {
-  $sizeMultiplier: 0.9;
-  .background {
-    width: calc(1440px * $sizeMultiplier);
-    height: calc(1024px * $sizeMultiplier);
-  }
-
-  .objects {
-    &__wallpaper {
-      width: calc(250px * $sizeMultiplier * 0.5);
-      height: calc(330px * $sizeMultiplier * 0.5);
-    }
-
-    &__door {
-      width: calc(107px * $sizeMultiplier * 0.5);
-      height: calc(401px * $sizeMultiplier * 0.5);
-    }
-
-    &__plat {
-      width: calc(352px * $sizeMultiplier * 0.5);
-      height: calc(195px * $sizeMultiplier * 0.5);
-    }
-  }
-}
-
-@media screen and (min-width: 1460px) and (min-height: 1024px) {
-  $sizeMultiplier: 1;
-  .background {
-    width: 1440px;
-    height: 1024px;
-  }
-
-  .objects {
-    &__wallpaper {
-      width: calc(250px * $sizeMultiplier * 0.5);
-      height: calc(330px * $sizeMultiplier * 0.5);
-    }
-
-    &__door {
-      width: calc(107px * $sizeMultiplier * 0.5);
-      height: calc(401px * $sizeMultiplier * 0.5);
-    }
-
-    &__plat {
-      width: calc(352px * $sizeMultiplier * 0.5);
-      height: calc(195px * $sizeMultiplier * 0.5);
-    }
-  }
-}
+@include generalAdaptives;
