--- a/app/src/components/UI/Button/Button.module.scss
+++ b/app/src/components/UI/Button/Button.module.scss
@@ -8,7 +8,16 @@
   cursor: pointer;
   transition: 0.3s;
 
+  @media screen and (max-width: 470px) {
+    font-size: 12px;
+    padding: 5px 15px;
+  }
+
   &:hover {
     padding: 10px 40px;
+
+    @media screen and (max-width: 470px) {
+      padding: 5px 20px;
+    }
   }
 }
