--- a/app/src/components/promo/Registration/Registration.module.scss
+++ b/app/src/components/promo/Registration/Registration.module.scss
@@ -6,3 +6,38 @@
   overflow: hidden;
   position: relative;
 }
+
+.submitData {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__row {
+    display: flex;
+    color: #fff;
+    font-size: 16px;
+    width: 250px;
+    margin-bottom: 10px;
+    overflow: hidden;
+
+    @media screen and (max-width: 470px) {
+      font-size: 12px;
+      width: 180px;
+    }
+  }
+
+  &__name {
+    font-weight: bold;
+    margin-right: 10px;
+  }
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  &__back {
+    margin-right: 10px;
+  }
+}
