--- a/app/src/components/UI/Popup/PopupTabs/PopupTabs.module.scss
+++ b/app/src/components/UI/Popup/PopupTabs/PopupTabs.module.scss
@@ -9,6 +9,8 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  border-bottom: 1px solid rgb(233, 232, 232);
+  margin-bottom: 30px;
 
   &__item {
     width: 100%;
@@ -19,7 +21,6 @@
     font-weight: bold;
     color: $secondaryText;
     padding: 5px 10px;
-    margin-bottom: 10px;
     cursor: pointer;
     border-bottom: 2px solid #fff;
 
